force-app/main/default/objects/Error_Message__c/Error_Message__c.object-meta.xml
<CustomObject>
    <label>Error Message</label>
    <nameField>
        <displayFormat>ERR{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Messages</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>