force-app/main/default/objects/Error_Message__c/fields/Account_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ERP_ID__c</fullName>
    <label>Account ERP ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>