force-app/main/default/objects/Error_Message__c/fields/Delivery_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>Delivery_ERP_ID__c</fullName>
    <label>Delivery ERP ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>