force-app/main/default/objects/Error_Message__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>Define the Replication Process Direction</description>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>Inbound</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Outbound</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>