force-app/main/default/objects/Error_Message__c/fields/Error_Message_Detail__c.field-meta.xml
<CustomField>
    <fullName>Error_Message_Detail__c</fullName>
    <label>Error Message Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>