force-app/main/default/objects/Error_Message__c/fields/Func_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Func_Error_Message__c</fullName>
    <description>Functional Error Message</description>
    <label>Error Message</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No IDoc saved in target system (SOAP HTTP)</fullName>
                <label>Backend at Backend</label>
            </value>
            <value>
                <fullName>currently being processed</fullName>
                <label>Sales Document is Currently Being Edited by SAP User, Please Kindly Contact Your Administrator for Further Information.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>