force-app/main/default/objects/Error_Message__c/fields/Invoice_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_ERP_ID__c</fullName>
    <label>Invoice ERP ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>