force-app/main/default/objects/Error_Message__c/fields/Material_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>Material_ERP_ID__c</fullName>
    <label>Material ERP ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>