force-app/main/default/objects/Error_Message__c/fields/Order_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ERP_ID__c</fullName>
    <label>Order ERP ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>