force-app/main/default/objects/Error_Message__c/fields/Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID__c</fullName>
    <label>Quote ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>