force-app/main/default/objects/Error_Message__c/fields/Sale_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sale_Organization__c</fullName>
    <label>Sales Organization Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>