force-app/main/default/objects/Error_Message__c/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <label>Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Input Validation</fullName>
            </value>
            <value>
                <fullName>Inquiry Creation</fullName>
            </value>
            <value>
                <fullName>Indirect Quotation</fullName>
            </value>
            <value>
                <fullName>Direct Quotation</fullName>
            </value>
            <value>
                <fullName>Delta Quotation</fullName>
            </value>
            <value>
                <fullName>Indirect Sales Order</fullName>
            </value>
            <value>
                <fullName>Direct Sales Order</fullName>
            </value>
            <value>
                <fullName>Delta Sales Order</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Account Creation</fullName>
            </value>
            <value>
                <fullName>Material Creation</fullName>
            </value>
            <value>
                <fullName>Delivery Order Creation</fullName>
            </value>
            <value>
                <fullName>Delivery Order Delta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>