force-app/main/default/objects/Error_Message__c/fields/ShipTo_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_ERP_ID__c</fullName>
    <label>ShipTo ERP ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>