force-app/main/default/objects/Error_Message__c/fields/Tech_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Tech_Error_Message__c</fullName>
    <description>Technical Error Message</description>
    <label>Technical Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>