force-app/main/default/objects/Error_Message__c/fields/User_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ERP_ID__c</fullName>
    <label>User ERP ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>