force-app/main/default/objects/Error_Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Scenario__c</columns>
    <columns>Sale_Organization__c</columns>
    <columns>Account_ERP_ID__c</columns>
    <columns>Quote_ERP_ID__c</columns>
    <columns>Opportunity_ID__c</columns>
    <columns>Error_Message_Detail__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>